# ash-survival-kit

./: .gitignore  Cargo.toml  README.md  _build.rs  compile_shaders.rs
src/: main.rs
src/setup/: buffer.rs  command_buffers.rs  extensions.rs  framebuffers.rs  graphics_pipeline.rs  image.rs  index_buffer.rs  instance.rs  mod.rs  model.rs  render_pass.rs  texture_image.rs  uniform_buffers.rs  vertex_buffer.rs
src/setup/command_buffers/: mod.rs
src/setup/command_pool/: mod.rs
src/setup/devices/: device_utils.rs  logical.rs  logical_devices.rs  mod.rs  physical.rs  physical_devices.rs  utils.rs
src/setup/frame_sync/: mod.rs
src/setup/framebuffers/: mod.rs
src/setup/graphics_pipeline/: mod.rs  utils.rs
src/setup/platform/: mod.rs  surface_khr.rs
src/setup/render_pass/: mod.rs
src/setup/swapchain/: mod.rs  utils.rs
src/setup/validation_layers/: mod.rs
src/shaders/: frag.spv  vert.spv
src/shaders/src/: shader.frag  shader.vert
src/structs/: mod.rs
src/utils/: debugging.rs  mod.rs
