[package]
name = "ash-survival-kit"
version = "0.1.0"
authors = ["Chris Statkiewicz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29.0"
cgmath = "0.17.0"
winapi = "0.3.7" # make target-aware
winit = "0.20.0-alpha2"
byteorder = "1.3.2"
field-offset = "0.1.1"