[package]
name = "ash-survival-kit"
version = "0.1.0"
authors = ["Chris Statkiewicz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
cgmath = "0.17.0"
winapi = "0.3.8" # make target-aware
winit = "0.22.2"
byteorder = "1.3.4"
field-offset = "0.3.0"
image = "0.23.4"